Added: redux and saga demo with public api

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_URL=https://myapi.com/
-API_TEST_URL=https://myapi.com/test/
+API_URL=https://randomuser.me/api/
+API_TEST_URL=https://randomuser.me/api/
