--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-localize": "^2.1.5",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
+    "react-native-video": "^5.2.0",
     "react-redux": "^7.2.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3"
@@ -38,8 +39,8 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
-    "jest": "^26.6.3",
     "husky": "^7.0.0",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2"
   },
